--- a/modules/videoio/CMakeLists.txt
+++ b/modules/videoio/CMakeLists.txt
@@ -3,6 +3,10 @@ if(EMSCRIPTEN OR IOS OR WINRT)
   set(VIDEOIO_ENABLE_PLUGINS_DEFAULT OFF)
 endif()
 
+if(NOT FFMPEG_SOURCE_PATH)
+  message(FATAL "Source code for current FFmpeg installation is not found!")
+endif()
+
 set(VIDEOIO_PLUGIN_LIST "" CACHE STRING "List of videoio backends to be compiled as plugins (ffmpeg, gstreamer, mfx, msmf or special value 'all')")
 set(VIDEOIO_ENABLE_PLUGINS "${VIDEOIO_ENABLE_PLUGINS_DEFAULT}" CACHE BOOL "Allow building and using of videoio plugins")
 mark_as_advanced(VIDEOIO_PLUGIN_LIST VIDEOIO_ENABLE_PLUGINS)
@@ -174,6 +178,7 @@ if(TARGET ocv.3rdparty.ffmpeg)
   else()
     list(APPEND videoio_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/cap_ffmpeg_impl.hpp)
     list(APPEND videoio_srcs ${CMAKE_CURRENT_LIST_DIR}/src/cap_ffmpeg.cpp)
+    list(APPEND videoio_srcs ${CMAKE_CURRENT_LIST_DIR}/src/cap_ffmpeg_timestamps.c)
     list(APPEND tgts ocv.3rdparty.ffmpeg)
     if(TARGET ocv.3rdparty.ffmpeg.builtin_deps)
       list(APPEND tgts ocv.3rdparty.ffmpeg.builtin_deps)
@@ -275,7 +280,7 @@ if(NOT BUILD_SHARED_LIBS
 endif()
 
 ocv_set_module_sources(HEADERS ${videoio_ext_hdrs} ${videoio_hdrs} SOURCES ${videoio_srcs})
-ocv_module_include_directories()
+ocv_module_include_directories("${FFMPEG_SOURCE_PATH}")
 ocv_create_module()
 ocv_add_accuracy_tests(${tgts})
 ocv_add_perf_tests(${tgts})
