--- a/samples/android/tutorial-3-cameracontrol/gradle/AndroidManifest.xml
+++ b/samples/android/tutorial-3-cameracontrol/gradle/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.opencv.samples.tutorial3"
->
+          package="org.opencv.samples.tutorial3">
 
     <application
         android:label="@string/app_name"
